compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_and_changing_custom_type_while_keeping_alias_with_same_parameters_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
+ pub type NewType

- pub type OldType(a, b) {
-   Wibble(a)
-   Wobble(b)
- }
+ pub type OldType(a, b) = NewType(a, b, Nil)
