compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_custom_type_while_keeping_alias_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
+ pub type NewType

- pub type OldType {
-   Wibble
-   Wobble
- }
+ pub type OldType = NewType
