compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_custom_type_while_keeping_alias_with_different_parameters_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type OldType(a, b) {
-   Wibble(a)
-   Wobble(b)
- }
+ pub type OldType(a, b) = NewType(b, a)
