compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_type_to_internal_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble {
-   Wibble
-   Wobble
- }
+ pub type Wibble = Wobble
