compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_type_with_constructors_across_modules_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== wibble ==
- pub type Wibble {
-   Wibble
-   Wobble
- }
+ pub type Wibble = Wibble
